refactor: migrated Bytes to kotlin