@@ -5,7 +5,6 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static de.pflugradts.passbird.domain.model.transfer.CharValue.FIRST_DIGIT_INDEX;
@@ -24,9 +23,9 @@ public class BytesComparator implements Comparator<Bytes> {
     @Override
     public int compare(final Bytes bytes1, final Bytes bytes2) {
         if (Objects.isNull(bytes1)) {
-            return compare(Bytes.empty(), bytes2);
+            return compare(Bytes.emptyBytes(), bytes2);
         } else if (Objects.isNull(bytes2)) {
-            return compare(bytes1, Bytes.empty());
+            return compare(bytes1, Bytes.emptyBytes());
         } else if (bytes1.equals(bytes2)) {
             return 0;
         }
@@ -34,7 +33,7 @@ public class BytesComparator implements Comparator<Bytes> {
     }
 
     private int compareNonEqualBytes(final Bytes bytes1, final Bytes bytes2) {
-        final var reverse = bytes1.size() > bytes2.size();
+        final var reverse = bytes1.getSize() > bytes2.getSize();
         final var b1 = reverse ? bytes2.toByteArray() : bytes1.toByteArray();
         final var b2 = reverse ? bytes1.toByteArray() : bytes2.toByteArray();
         var index = -1;
@@ -58,9 +57,9 @@ public class BytesComparator implements Comparator<Bytes> {
         IntStream.range(FIRST_DIGIT_INDEX, LAST_DIGIT_INDEX + 1)
                 .forEach(asciiValue -> sortReferenceMap.put(asciiValue, index.getAndIncrement()));
         final var uppercase = IntStream.range(FIRST_UPPERCASE_INDEX, LAST_UPPERCASE_INDEX + 1)
-                .boxed().collect(Collectors.toList());
+                .boxed().toList();
         final var lowercase = IntStream.range(FIRST_LOWERCASE_INDEX, LAST_LOWERCASE_INDEX + 1)
-                .boxed().collect(Collectors.toList());
+                .boxed().toList();
         IntStream.range(0, uppercase.size()).boxed().forEach(i -> {
             sortReferenceMap.put(uppercase.get(i), index.get());
             sortReferenceMap.put(lowercase.get(i), index.getAndIncrement());
